--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'org.hamcrest:java-hamcrest:2.0.0.0'
+    testCompile ('junit:junit:4.12') { exclude group: 'org.hamcrest' }
+    testCompile 'org.mockito:mockito-core:1.9.5'
 
 }
